crates/adoc-cli/tests/snapshots/integration__why_cli__why_plain.snap
---
source: crates/adoc-cli/tests/why_cli.rs
expression: stdout
---
Object: billing.refunds.issue-credit
Kind: claim
Status: verified
Owner: team-billing
Verified: 2026-05-06

Statement:
Refund credits are issued from the ledger after approval.

Evidence:
- source_code: ledger-export
- test: cargo test refunds
- human_review: risk-team

Fields:
- trust: team

Source: docs/refunds.adoc:12:3

Relations:
- depends_on: billing.credits.ledger-source
- supersedes: billing.refunds.manual-credit
- related_to: billing.refunds.audit-required

✓ rendered from docs.graph.json · trust: team
